Fixed the top padding in the mobile nav so that it wont be hidden behind the phone's top notch

--- a/src/sass/layouts/_nav.scss
+++ b/src/sass/layouts/_nav.scss
@@ -19,6 +19,11 @@
     border-top: 8px solid $neon-blue;
   }
 
+  a {
+    font-size: 1.25em;
+    font-weight: 500;
+  }
+
   button {
     cursor: pointer;
     height: 100%;
@@ -70,6 +75,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 1.5em;
 
     @include mq(medium) {
       display: none;
@@ -194,7 +200,7 @@
     a {
       color: inherit;
       text-shadow: none;
-      transition: color ease-in-out 0.5s;
+      transition: color ease-in-out 0.1s;
       //transition: border-bottom ease 0.5s;
 
       &:hover {
